fixed postpreview detail spacing

--- a/frontend/blog/src/sidebar.css
+++ b/frontend/blog/src/sidebar.css
@@ -47,16 +47,20 @@ html{
 
 .postTitle {
     position: absolute;
-    bottom: 0;
-    left: 0;
+    bottom: 20px;
+    left: 10px;
     width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 .postDate {
     position: absolute;
-    top: 0; 
-    left: 0; 
+    top: 10px; 
+    left: 10px; 
     width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 h3 span {
